--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,6 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        multiDexEnabled true
-
     }
     buildTypes {
         release {
@@ -35,6 +33,10 @@ android {
     }
 }
 
+ext {
+    dagger_version = "2.8"
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -50,5 +52,8 @@ dependencies {
     compile 'android.arch.lifecycle:extensions:1.0.0-alpha2'
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha2"
     compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.8'
+    compile "com.google.dagger:dagger:${dagger_version}"
+    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
 }
