--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 
 ext {
     dagger_version = "2.8"
+    arch_persistence = "1.0.0-alpha2"
 }
 
 dependencies {
@@ -45,15 +46,17 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'android.arch.persistence.room:runtime:1.0.0-alpha2'
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha2"
-    compile 'android.arch.persistence.room:rxjava2:1.0.0-alpha2'
-    compile 'android.arch.lifecycle:runtime:1.0.0-alpha2'
-    compile 'android.arch.lifecycle:extensions:1.0.0-alpha2'
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha2"
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
+    compile "android.arch.persistence.room:runtime:${arch_persistence}"
+    compile "android.arch.persistence.room:rxjava2:${arch_persistence}"
+    compile "android.arch.lifecycle:runtime:${arch_persistence}"
+    compile "android.arch.lifecycle:extensions:${arch_persistence}"
     compile "com.google.dagger:dagger:${dagger_version}"
     annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
+    annotationProcessor "android.arch.lifecycle:compiler:${arch_persistence}"
+    annotationProcessor "android.arch.persistence.room:compiler:${arch_persistence}"
+
+
 }
